--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,5 +93,6 @@
         "valarray": "cpp"
     },
     "cmake.sourceDirectory": "/home/eylul/example_opencv/src",
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "C_Cpp.errorSquiggles": "enabled"
 }
